--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcryptjs": "^2.4.3",
+    "buffer-to-stream": "^1.0.0",
+    "cloudinary": "^1.32.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "pg": "^8.8.0",
@@ -40,6 +43,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
